linked to 2nd pg in footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet"> 
+
      
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src='moment.js'></script>
@@ -433,7 +434,7 @@ crossorigin="anonymous">---->
       <p class='hi-low'>12°c /17°c</p>  
     </div>
     <!-----<img src="sky.png" class='icon' alt="" />---->
-    <img src="http://openweathermap.org/img/wn/10d@2x.png" class='icon' alt="" />
+    <img src="http://openweathermap.org/img/wn/10d@2x.png" class='icon' alt="" /> 
   </div> 
 
 
@@ -512,7 +513,7 @@ crossorigin="anonymous">---->
 
 
 
-<footer class="app-footer"></footer> 
+   <footer class="app-footer"><a href="ambient2.html">Visit Ambient.Com</a></footer> 
 
 
 
