--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ crossorigin="anonymous">--->
 
 <!---<link rel='stylesheet' href='weatherLatest.css'>-----> 
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+<!----<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>---->
 <!----<script src='moment.js'></script>
 <script src='momenttimezone.js'></script>---> 
 
@@ -1356,7 +1356,7 @@ speechSynthesis.speak(DewPointText);
 <--<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js'></script> 
 
 Note! The moment js version i linked to below is older & seemsto workbetter without saying it can't load!--->
-        
+   
         
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
@@ -1364,5 +1364,6 @@ Note! The moment js version i linked to below is older & seemsto workbetter with
 
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.31/moment-timezone-with-data.js'></script>
+   <p>HELLLLLLLLLOOOOOOOOO!</p>
 </body>
 </html>
