--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <!--------------<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>--->
 
 
-<link href='ambientAppindex.css' rel='stylesheet'> 
+<link href='ambientAppindex2.css' rel='stylesheet'> 
 
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
+<!----<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
 rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" 
-crossorigin="anonymous">
+crossorigin="anonymous">--->
 
 <!---<link rel='stylesheet' href='weatherLatest.css'>-----> 
 
