--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <meta name="theme-color" content="#485461">
+    <meta name="theme-color" content="#0b0d0e">
 
 
 <!--------------<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>--->
