--- a/ambient2.html
+++ b/ambient2.html
@@ -313,21 +313,21 @@ text-align: center;
     grid-template-columns: 1fr 1fr;
     font-weight: lighter;
     text-transform: uppercase;
-    grid-gap: 50px;
+    grid-gap: 30px;
     text-align: center;
     list-style: none;
     margin-top: 130px;
     list-style-type: none;
     padding: 16px;
-    margin-left: 9px;
-    margin-right: 9px;
+    margin-left: 7px;
+    margin-right: 7px;
 
     background-color: #36096d;
     background-image: linear-gradient(315deg, #7955a5 0%, #37d5d6 74%);
     /* background-image: linear-gradient(315deg, #faac88 0%, #f7b689 30%,#faac88 74%); */
     /* background-image: url(gold-foil-texture.jpg); */
     background-repeat: no-repeat;
-    font-size: 15px;
+    font-size: 12px;
     text-align: center;
     font-weight: lighter;
     text-transform: uppercase;
@@ -365,7 +365,7 @@ ul{
 
 
   margin-bottom: 112px;
-    background-image: url(gold-foil-texture.jpg);
+    /*background-image: url(gold-foil-texture.jpg);*/
     background-repeat: repeat;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
