--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ crossorigin="anonymous">--->
       <p id='appName'>Ambient.</p> 
       <div class="inputAndMagnifyingBtn">
       <!---<input type="text" class="search-box" placeholder="Search a city..." onclick='clearInputNdisplay()'spellcheck="false" results="0"><button type="submit"><img class="search" src="search.png"/></button>---->  
-      <input type="text" id='searchBox' class="search-box" placeholder="Search a city..." spellcheck="false" results="0">
+      <input type="text" id='searchBox' class="search-box" placeholder="Search a city..." spellcheck="false" results="0"> <button type="submit"><img class="search" src="search.png"/></button>
     </div> 
 
   
